- Fix: Sidebar block editor width changes on the widgets page.
- Fix: Off-canvas menu closes on scrolling on mobile devices.
- Fix: Theme's default margin space of OL tag apply to Elementor's TOC widget.
- Fix: Menu dropdown icons showing at incorrect position in RTL languages.
- Fix: “Search” string in Search Form is not translatable.

v3.6.5
- Improvement: Compatibility with WordPress 5.8.
- Improvement: Added default styling for - Site Logo, Site Tagline, Login/out and Search blocks.
- Improvement: Widget Element - block editor and design section added.
- Improvement: Theme support added for Rank Math plugin - breadcrumbs module.
- Fix: Customizer not working due to conflict with block editor JS.
- Fix: Alignment of title and content in the editor.
- Fix: WP 5.8 UI conflict with extra control spacing and section title font in the customizer.
- Fix: Widget page block editor width not appearing properly.
- Fix: Headers showing border even though its not set from customizer in FireFox browser.

v3.6.4
- Improvement: Introducing content links underline option.

v3.6.3
- Improvement: Global button default padding values updated.
- Fix: Global button padding settings not working for Gutenberg buttons. ( https://wpastra.com/docs/apply-default-button-padding/ )

v3.6.2
- Fix: Enable 'Preload Local Fonts' option affects on height of Gutenberg Cover edit block.
- Fix: Related Posts articles showing meta structure based on current active post.

v3.6.1
- Fix: Theme check warning - Replaced search form markup with get_search_form().
- Fix: Both desktop and mobile headers appearing on desktop due to Astra's cache.

v3.6.0
- New: Performance - Load Google Font locally. (https://wpastra.com/docs/self-hosted-google-fonts/)
- New: Performance - Preload locally hosted Google Font. (https://wpastra.com/docs/self-hosted-google-fonts/)
- Improvement: Added SVG logo height option to resolve the CLS issue. (https://wpastra.com/docs/fix-svg-logo-cls-issue/)